--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -7,7 +7,9 @@
 @import 'productos';
 @import 'tienda';
 @import 'contactos';
+@import 'nosotros';
 @import 'medias';
 @import 'condicionales';
 @import 'mixins';
+@import 'maps';
 
