--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -1,28 +1,34 @@
  /* propiedades contenido principal nosotros */
 
-.historia{
-    margin-top: 50px;
-}
 .imghistoria{
     margin-top: 35px;
 }
 
+p.historia{ padding: 15px;
+    background-color: rgb(55, 182, 55);
+    margin-top: 50px; 
+    display: flex;
+    justify-content: center;
+}
+
 /*estilo titulo video*/
 
-.cosecha{
+div p.cosecha{
     font-size: 22px; 
     color:rgb(40, 126, 40); 
     text-decoration: underline; 
     margin-bottom: 50px;
+    margin-top: 100px;
 }
+
 
 /*ubicacion foto seccion nosotros*/
 
 .papaAcampo{
-    width: 320px; 
-    height: 320px; 
+    width: 300px; 
+    height: 300px; 
     display: block;
 }
-p.cosecha{
-    margin-top: 100px;
-}
+
+
+
