--- a/css/estilos.css
+++ b/css/estilos.css
@@ -175,6 +175,10 @@ a.subir {
   padding-left: 25px;
 }
 
+.aTienda {
+  text-decoration: none;
+}
+
 /*propiedades pie de pagina*/
 footer.f {
   margin-top: 40px;
@@ -190,6 +194,12 @@ footer.f b.referencia {
 }
 
 /*estilos nuestros productos*/
+.imgT {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .imgProducto {
   width: 300px;
   height: 300px;
@@ -216,7 +226,7 @@ p.descrip {
   margin-top: -10px;
 }
 
-a:hover p {
+.imgT:hover p {
   visibility: visible;
 }
 
