--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,5 +1,11 @@
 /*estilos nuestros productos*/
 
+.imgT{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .imgProducto{
     width: 300px; 
     height: 300px; 
@@ -23,7 +29,7 @@ p.descrip {
     margin-top: -10px;
   }
    
-  a:hover p {
+.imgT:hover p {
     visibility: visible;
   }
 
