--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -41,11 +41,14 @@ body header div a img.logo {
     
 .tituloLogo{ 
     color: rgb(7, 107, 7);
-    }
+    font-weight: bold;
+}
+
 .titulo22{
         color: rgb(7, 107, 7);
         padding-right: 10px;
-    }   
+} 
+
 .log{
     border-radius: 10%;
 }    
@@ -59,7 +62,7 @@ body header div a img.logo {
 
 .nav-link {
         color: green;
-        }
+}
         
 li.nav-item {
     padding: 8px;
