--- a/scss/_seccionPr.scss
+++ b/scss/_seccionPr.scss
@@ -45,7 +45,9 @@ body section img{
 p.irAseccion{ 
     font-size: 24px; 
     text-decoration: underline; 
-    padding-top: 30px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: rgb(28, 131, 28);
 }
 /*ANIMACIONES*/
 
