--- a/scss/_contactos.scss
+++ b/scss/_contactos.scss
@@ -1,3 +1,11 @@
+/*PROPIEDADES H1 SOBRE EN FORMULARIO*/
+
+h1.tituloForm{
+    margin-top: 100px;
+}
+
+
+
 /*propiedades iconos redes*/
 
 div.redes20{
@@ -11,11 +19,12 @@ div.redes20{
     height: 70px;
     padding: 10px;
     border-radius: 15%;
+    margin-bottom: 15px;
 }
 
 .redes:hover{
-    scale: 1.6;
-    transition: 0.5s;
+    scale: 1.3;
+    transition: 0.2s;
     cursor: pointer;
 }
 
@@ -37,6 +46,11 @@ a.redesN {
     flex-direction: column;
 }
 
+.redes3{ text-decoration: none;
+            color: rgb(76, 128, 76);
+
+}
+
 .redes3:hover{
     color: green; cursor: pointer;
 }
@@ -48,10 +62,11 @@ div h2.formu{
     display: flex;
     justify-content: center; 
     margin-bottom: 100px; 
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 .formulario{
+    margin-top: 75px;
     width: 1000px;
 }
 
@@ -59,10 +74,12 @@ textarea, input{
     border: solid green 1px;
 }
 
-input:hover{ background-color: rgb(106, 187, 106);
+input:hover{ 
+    background-color: rgb(106, 187, 106);
 }
 
-textarea:hover{ background-color: rgb(106, 187, 106);
+textarea:hover{ 
+    background-color: rgb(106, 187, 106);
 }
 
 button{
@@ -75,12 +92,9 @@ label {
 
 /*ubicacion mapa*/
 
-div iframe{
-    padding-bottom: 30px;
-    .mapa{
-        margin-top: 150px; 
-        margin-bottom: 150px;
-    }
+iframe{
+        margin-top: 40px; 
+        margin-bottom: 75px;
 }
 
 /*Titulo sobre el mapa*/
@@ -91,8 +105,10 @@ p.direccion{
     font-size: 30px; 
     color: rgb(40, 126, 40); 
     text-decoration: underline;
-    margin-top: 40px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
+
 
 
 
