--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -1,4 +1,4 @@
-/*MEDIAS QUERIES*/
+/*MEDIAS QUERIES MENU*/
 
 @media (max-width: 480px){
     li {
@@ -25,8 +25,30 @@
       header div div nav {
         display: flex; 
         justify-content: flex-end;
-} 
+ } 
 }
+
+@media (max-width: 480px){
+  ul.desktop {
+    display: none;
+  } 
+}
+@media (min-width: 480px) {
+  .respon {
+    display: none;
+  }
+}
+@media (min-width: 480px) {
+  nav.navbar {
+    display: none;
+  }
+  .subirM{
+    display: none;
+  }
+}
+
+/*MEDIAS QUIERIES FOTOS PRODUCTOS Y REDES*/
+
 @media (max-width: 480px) {
     div p.nombre{
         text-align: center; 
@@ -36,7 +58,8 @@
 @media (max-width: 480px) {
       .papas11{
           text-align: center;
-      }  .imgT {
+      }  
+      .imgT {
         text-align: center;
       }
       .precio {
@@ -54,11 +77,16 @@
       }
     
 }
+
+/*MEDIAS QUIERIES FOOTER*/
+
 @media (max-width: 480px) {
       footer div div b.referencia { 
         line-height: normal;   
       }
 }
+
+/*MEDIAS QUIERIES DE TITULOS, SUBTITULOS Y DESCRIPCIONES*/
 @media (max-width: 480px){
       h2.historia {
         margin-top: 100px; 
@@ -69,24 +97,7 @@
         margin-top: 40px; 
   } 
 }
-@media (max-width: 480px){
-    ul.desktop {
-      display: none;
-    } 
-}
-@media (min-width: 480px) {
-    .respon {
-      display: none;
-    }
-}
-@media (min-width: 480px) {
-    nav.navbar {
-      display: none;
-    }
-    .subirM{
-      display: none;
-    }
-}
+
 @media (max-width: 480px){
     h1 {
       margin-top: 50px;
@@ -113,5 +124,12 @@
 @media (max-width: 480px) {
       .historia1{
       display: flex; justify-content: center;     
+      }
+}
+/*MEDIAS QUIERIES FORMULARIO*/
+
+@media (max-width: 480px) {
+        .formulario{
+          width: 300px;
       }
 }
