--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,6 +31,10 @@ a {
   color: rgb(82, 3, 82);
 }
 
+li a:hover {
+  font-weight: bold;
+}
+
 /* propiedades encabezado y navegacion */
 header div div {
   display: flex;
@@ -58,6 +62,10 @@ header div div nav ul li {
 header div div nav ul li a {
   color: green;
   text-decoration: none;
+}
+
+li a:hover {
+  font-weight: bold;
 }
 
 /*medidas para el logo*/
@@ -351,6 +359,8 @@ a.redesN {
 .redes3:hover {
   color: green;
   cursor: pointer;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 /* propiedades formulario de contacto */
